--- a/palaute.html
+++ b/palaute.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+   
+</head>
+
+<body>
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
+    <a class="navbar-brand" href="#">EV ACTIVE</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/etusivu.html">KOTI</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/jarvi.html">JÄRVELLÄ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/metsa.html">METSÄSSÄ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/kaupunki.html">KAUPUNGISSA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/palaute.html">PALAUTE</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  
+  <script>
+    var navbarToggler = document.querySelector(".navbar-toggler");
+    var navbarCollapse = document.querySelector(".navbar-collapse");
+  
+    navbarToggler.addEventListener("click", function () {
+      navbarCollapse.classList.toggle("show");
+    });
+  </script>
+
+</body>
+
+</html>
