--- a/etu.html
+++ b/etu.html
@@ -26,7 +26,8 @@
             <button a href="#kategoriat">TUTUSTU</button>
         </section>
 
-        <section id="esittely">
+
+        <section id="esittely" class="esittely-osa">
             <h1>Miksi viettää aikaa ulkona?</h1>
             <p>
                 Ulkoilu on ihana tapa viettää aikaa luonnossa, rentoutua ja saada virkistystä ja inspiraatiota. Tällä
@@ -48,7 +49,7 @@
             </p>
         </section>
 
-        <section id="kategoriat">
+        <section class="kategoriat" id="kategoriat">
             <h1>Aktiviteettikategoriat</h1>
 
             <footer class="rivi">
@@ -75,11 +76,12 @@
             <h1>Etsi aktiviteettia sijainnin mukaan!</h1>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d17422.017660141722!2d27.68572858715859!3d62.89115964656398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfi!2sfi!4v1677176478060!5m2!1sfi!2sfi"
-                width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy"
+                
+                 style="border:0;" allowfullscreen="true" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
-        <footer id="tiedot">
+        <footer class="yhteystiedot" id="tiedot">
             <h1>Yhteystiedot</h1>
             <ul>
                 <li style="list-style-image: url('puhelin.png')">+358 444 555 7854</li><br><br>
