--- a/kaupunki.html
+++ b/kaupunki.html
@@ -63,20 +63,19 @@
     </div>
   </section>
 
-    <section class="Yhteystiedot" id="contact">
-        <div class="rivi">
-            <div class="col-lg-8">
-                <h2>Yhteystiedot</h2>
-                <ul>
-                    <li a href="file:///C:/temp/Ulkoiluaktiviteettisivu/jarvi.html" style="list-style-image: url('puhelin.png')">+358 444 555 7854</li>
-                    <li style="list-style-image: url('email.png')">kaupunki@info.com</li>
-                    <li style="list-style-image: url('form.png')">Anna palautetta</li>
-    
-                </ul>
+  <section class="yhteystiedot" id="contact">
+    <div class="rivi">
+        <div class="col-lg-12">
+            <h2>Yhteystiedot</h2>
+            <ul>
+                <li style="list-style-image: url('puhelin.png')">+358 444 555 7854</li><br>
+                <li style="list-style-image: url('email.png')">kaupunki@info.com</li><br>
+                <li style="list-style-image: url('form.png')"><a href="file:///C:/temp/Ulkoiluaktiviteettisivu/palaute.html">Anna palautetta</a></li><br>
 
-            </div>
+            </ul>
         </div>
-    </section>
+    </div>
+</section>
 
     </body>
 
