--- a/etusivu.html
+++ b/etusivu.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
-        <a class="navbar-brand" href="#">EV ACTIVE</a>
+        <a class="navbar-brand" href="file:///C:/temp/Ulkoiluaktiviteettisivu/etusivu.html">EV ACTIVE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,31 +48,17 @@
         });
     </script>
 
-
-    <!-- Ensimmäinen näkymä -->
-
-    <div class="koti">
-        <div class="landing">
-            <h1>Tervetuloa tutustumaan monipuoliseen aktiviteettitarjontaamme!</h1>
-            <!-- <a href="#esittely" class="btn btn-default btn-lg">TUTUSTU</a> -->
-            <button class="tutustu-nappi btn-default btn-lg"><a href="#esittely">TUTUSTU</a></button>
-        </div>
-    </div>
- 
-    <!-- <section class="aloitus" id="koti">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="aloitus bg-image" style="background-image: url('lumilautailu.webp'); height: 100vh;">
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <p class="lead">Tervetuloa tutustumaan monipuoliseen aktiviteettitarjontaamme!</p>
-                    <button class="tutustu-nappi"><a href="#esittely">TUTUSTU</a></button>
+    <!-- Landing page -->
+    <div class="koti h-100 position-relative">
+        <div class="d-flex h-100 align-item-center">
+            <div row>
+                <div class="text-black col-sm-6">
+                    <h1 class="fw-bold mb-4">Tervetuloa tutustumaan monipuoliseen aktiviteettitarjontaamme!</h1>
+                    <a href="#esittely" class="mt-2 btn-lg btn-outline-light" role="button">TUTUSTU</a>
                 </div>
             </div>
         </div>
-    </section>  -->
+    </div>
 
     <!-- Esittelynäkymä -->
     <section class="esittely-osa" id="esittely">
@@ -166,19 +152,19 @@
 
 
     <section class="yhteystiedot" id="contact">
-        <div class="rivi">
-            <div class="col-lg-12">
+        <div class="row">
+            <div class="yrivi col-lg-6 ">
                 <h2>Yhteystiedot</h2>
                 <ul>
                     <li style="list-style-image: url('puhelin.png')">+358 444 555 7854</li><br>
                     <li style="list-style-image: url('email.png')">kaupunki@info.com</li><br>
-                    <li style="list-style-image: url('form.png')"><a href="file:///C:/temp/Ulkoiluaktiviteettisivu/palaute.html">Anna palautetta</a></li><br>
+                    <li style="list-style-image: url('form.png')"><a
+                            href="file:///C:/temp/Ulkoiluaktiviteettisivu/palaute.html">Anna palautetta</a></li><br>
 
                 </ul>
             </div>
         </div>
     </section>
-
 
 </body>
 
