--- a/palaute.html
+++ b/palaute.html
@@ -6,48 +6,162 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-   
+    <link href="palaute.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
+        <a class="navbar-brand" href="#">EV ACTIVE</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
-    <a class="navbar-brand" href="#">EV ACTIVE</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/etusivu.html">KOTI</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/jarvi.html">JÄRVELLÄ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/metsa.html">METSÄSSÄ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/kaupunki.html">KAUPUNGISSA</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/palaute.html">PALAUTE</a>
-        </li>
-      </ul>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/etusivu.html">KOTI</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/jarvi.html">JÄRVELLÄ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/metsa.html">METSÄSSÄ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/kaupunki.html">KAUPUNGISSA</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="file:///C:/temp/Ulkoiluaktiviteettisivu/palaute.html">PALAUTE</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <script>
+        var navbarToggler = document.querySelector(".navbar-toggler");
+        var navbarCollapse = document.querySelector(".navbar-collapse");
+
+        navbarToggler.addEventListener("click", function () {
+            navbarCollapse.classList.toggle("show");
+        });
+    </script>
+
+
+    <div class="koti h-100 position-relative">
+        <div class="d-flex h-100 align-item-center">
+            <div class="text-black col-sm-12">
+                <h1 class="fw-bold mb-4">Palautteesi on meille ensiarvoisen tärkeää!</h1>
+            </div>
+        </div>
     </div>
-  </nav>
-  
-  <script>
-    var navbarToggler = document.querySelector(".navbar-toggler");
-    var navbarCollapse = document.querySelector(".navbar-collapse");
-  
-    navbarToggler.addEventListener("click", function () {
-      navbarCollapse.classList.toggle("show");
-    });
-  </script>
+
+    <section class="esittely-osa" id="esittely">
+        <div class="container text-center">
+            <div class="rivi">
+                <div class="col-md-12 mx-auto">
+                    <h1 class="section-title mb-4">Miten voisimme kehittyä?</h1>
+                    <p>
+                        Voit ottaa meihin yhteyttä soittamalla numeroon +358 444 555 7854 tai laittamalla viestiä
+                        osoitteeseen kaupunki@info.com. Voit ottaa yhteyttä myös täyttämällä alla olevan lomakkeen.
+
+                        Palautteesi on meille ensiarvoisen tärkeää. Täytä alla oleva lomake ja otamme asian käsittelyyn
+                        pikimmiten
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="palaute justify-content-center" id="palaute">
+        <div class="container">
+            <form class="kysely">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted"></small>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Email</label>
+                    <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Puhelinnumero</label>
+                    <input type="puhelinnumero" class="form-control" id="exampleInputPassword1"
+                        placeholder="Puhelinnumero">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Palautteen aihe</label>
+                    <input type="aihe" class="form-control" id="exampleInputPassword1" placeholder="Palautteen aihe">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Palaute</label>
+                    <textarea class="form-control" id="exampleInputPassword1" placeholder="Vapaa palaute"></textarea>
+                </div>
+                <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Haluatko, että olemme sinuun yhteydessä
+                        palautteeseen
+                        liittyen?</label>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Lähetä</button>
+            </form>
+        </div>
+    </section> 
+
+
+
+    <!-- <section class="palaute justify-content-center" id="palaute">
+      
+            <form class="kysely">
+                <div class="form-group">
+                    <label>Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted"></small>
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label>Puhelinnumero</label>
+                    <input type="puhelinnumero" class="form-control" id="exampleInputPassword1"
+                        placeholder="Puhelinnumero">
+                </div>
+                <div class="form-group">
+                    <label>Palautteen aihe</label>
+                    <input type="aihe" class="form-control" id="exampleInputPassword1" placeholder="Palautteen aihe">
+                </div>
+                <div class="form-group">
+                    <label>Palaute</label>
+                    <input type="palaute" class="form-control" id="exampleInputPassword1" placeholder="Vapaa palaute">
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Haluatko, että olemme sinuun yhteydessä
+                        palautteeseen liittyen?</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Lähetä</button>
+            </form>
+    </section> -->
+
+    <section class="yhteystiedot" id="contact">
+        <div class="rivi">
+            <div class="col-lg-12">
+                <h2>Yhteystiedot</h2>
+                <ul>
+                    <li style="list-style-image: url('puhelin.png')">+358 444 555 7854</li><br>
+                    <li style="list-style-image: url('email.png')">kaupunki@info.com</li><br>
+                    <li style="list-style-image: url('form.png')"><a
+                            href="file:///C:/temp/Ulkoiluaktiviteettisivu/palaute.html">Anna palautetta</a></li><br>
+
+                </ul>
+            </div>
+        </div>
+    </section>
 
 </body>
 
