--- a/etusivu.html
+++ b/etusivu.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
-        <a class="navbar-brand" href="file:///C:/temp/Ulkoiluaktiviteettisivu/etusivu.html">EV ACTIVE</a>
+        <a class="navbar-brand" href="#">EV ACTIVE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
