--- a/kaupunki.html
+++ b/kaupunki.html
@@ -51,7 +51,7 @@
 
   <div class="koti h-100 position-relative">
     <div class="d-flex h-100 align-item-center">
-      <div class="text-black col-sm-12">
+      <div class="text-black col-sm-12 text-center">
         <h1 class="fw-bold mb-4">Tutustu kaupungin ulkoiluaktiviteetteihin!</h1>
         <a href="#esittely" class="mt-2 btn-lg btn-outline-light" role="button">LUE LISÄÄ</a>
       </div>
