--- a/metsa.html
+++ b/metsa.html
@@ -53,9 +53,9 @@
 <div class="koti h-100 position-relative">
   <div class="d-flex h-100 align-item-center">
       <div row>
-          <div class="text-black col-sm-6">
+          <div class="text-black col-sm-12 text-center">
               <h1 class="fw-bold mb-4">Tutustu metsän aktivitteetteihin!</h1>
-              <a href="#esittely" class="mt-2 btn-lg btn-outline-light" role="button">LUE LISÄÄ</a>
+              <a href="#esittely" class="mt-2 btn-lg btn-default btn-outline-light" role="button">LUE LISÄÄ</a>
           </div>
       </div>
   </div>
