--- a/jarvi.html
+++ b/jarvi.html
@@ -52,7 +52,7 @@
     <div class="koti h-100 position-relative">
         <div class="d-flex h-100 align-item-center">
             <div row>
-                <div class="text-black col-sm-6">
+                <div class="text-black col-sm-12 text-center">
                     <h1 class="fw-bold mb-4">Tutustu järviulkoiluaktiviteetteihin!</h1>
                     <a href="#esittely" class="mt-2 btn-lg btn-outline-light" role="button">LUE LISÄÄ</a>
                 </div>
@@ -75,6 +75,7 @@
                         järkkymättömäksi. </p>
                     </p>
                 </div>
+            
             </div>
         </div>
     </section>
