--- a/palaute.html
+++ b/palaute.html
@@ -46,16 +46,19 @@
         navbarToggler.addEventListener("click", function () {
             navbarCollapse.classList.toggle("show");
         });
+
     </script>
 
 
+    <!-- aloitus banner -->
     <div class="koti h-100 position-relative">
         <div class="d-flex h-100 align-item-center">
-            <div class="text-black col-sm-12">
+            <div class="text-black col-sm-12 text-center">
                 <h1 class="fw-bold mb-4">Palautteesi on meille ensiarvoisen tärkeää!</h1>
             </div>
         </div>
     </div>
+
 
     <section class="esittely-osa" id="esittely">
         <div class="container text-center">
@@ -74,80 +77,55 @@
         </div>
     </section>
 
-    <section class="palaute justify-content-center" id="palaute">
-        <div class="container">
-            <form class="kysely">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted"></small>
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Email</label>
-                    <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Puhelinnumero</label>
-                    <input type="puhelinnumero" class="form-control" id="exampleInputPassword1"
-                        placeholder="Puhelinnumero">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Palautteen aihe</label>
-                    <input type="aihe" class="form-control" id="exampleInputPassword1" placeholder="Palautteen aihe">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Palaute</label>
-                    <textarea class="form-control" id="exampleInputPassword1" placeholder="Vapaa palaute"></textarea>
-                </div>
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Haluatko, että olemme sinuun yhteydessä
-                        palautteeseen
-                        liittyen?</label>
-                </div>
-                <button type="submit" class="btn btn-primary btn-block">Lähetä</button>
-            </form>
-        </div>
-    </section> 
+    <script>
 
+    </script>
 
+    <!-- Kysely -->
+    <div class="container mr-5" id="kysely">
+        <h3>Ota yhteyttä!</h3>
+        <form class="row g-3">
+            <div class="col-md-6">
+                <label for="etunimi" class="form-label">Etunimi*</label>
+                <input type="text" class="form-control" id="etunimi" required>
+            </div>
+            <div class="col-md-6">
+                <label for="sukunimi" class="form-label">Sukunimi*</label>
+                <input type="text" class="form-control" id="stunimi" required>
+            </div>
+            <div class="col-md-6">
+                <label for="email" class="form-label">Sähköpostiosoite*</label>
+                <input type="email" class="form-control" id="email" required>
+            </div>
+            <div class="col-md-6">
+                <label for="numero" class="form-label">Puhelinnumero</label>
+                <input type="text" class="form-control" id="numero" placeholder="+358-000 0000 000">
+            </div>
+            <div class="col-md-12">
+                <label for="palaute" class="form-label">Viesti*</label>
+                <textarea class="form-control" id="palaute" rows="5" required></textarea>
+            </div>
+            <div class="col-md-12">
+                <button type="submit" class="btn btn-primary" onclick="validateForm()">Lähetä</button>
+            </div>
+        </form>
+    </div>
 
-    <!-- <section class="palaute justify-content-center" id="palaute">
+    <!-- Kun kaikki pakolliset kentät on täytetty ja käyttäjä painaa lähetä-nappia, 
+    näytölle tulee ilmoitus, että viesti on lähetetty -->
+    <script>
+        function validateForm() {
+          const requiredFields = document.querySelectorAll('[required]');
+          
+          const allFilled = Array.from(requiredFields).every(field => field.value);
       
-            <form class="kysely">
-                <div class="form-group">
-                    <label>Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted"></small>
-                </div>
-                <div class="form-group">
-                    <label>Email</label>
-                    <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <label>Puhelinnumero</label>
-                    <input type="puhelinnumero" class="form-control" id="exampleInputPassword1"
-                        placeholder="Puhelinnumero">
-                </div>
-                <div class="form-group">
-                    <label>Palautteen aihe</label>
-                    <input type="aihe" class="form-control" id="exampleInputPassword1" placeholder="Palautteen aihe">
-                </div>
-                <div class="form-group">
-                    <label>Palaute</label>
-                    <input type="palaute" class="form-control" id="exampleInputPassword1" placeholder="Vapaa palaute">
-                </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Haluatko, että olemme sinuun yhteydessä
-                        palautteeseen liittyen?</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Lähetä</button>
-            </form>
-    </section> -->
+          if (allFilled) {
+            alert('Viestisi on lähetetty.\n Olemme sinuun yhteydessä pian!');
+          }
+        }
+      </script>
 
+    <!-- Yhteystiedot section -->
     <section class="yhteystiedot" id="contact">
         <div class="rivi">
             <div class="col-lg-12">
