--- a/palaute.html
+++ b/palaute.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
-        <a class="navbar-brand" href="Ulkoiluaktiviteettisivu/etusivu.html">EV ACTIVE</a>
+        <a class="navbar-brand" href="etusivu.html">EV ACTIVE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,23 +21,24 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="Ulkoiluaktiviteettisivu/etusivu.html">KOTI</a>
+                    <a class="nav-link" href="etusivu.html">KOTI</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Ulkoiluaktiviteettisivu/jarvi.html">JÄRVELLÄ</a>
+                    <a class="nav-link" href="jarvi.html">JÄRVELLÄ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Ulkoiluaktiviteettisivu/metsa.html">METSÄSSÄ</a>
+                    <a class="nav-link" href="metsa.html">METSÄSSÄ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Ulkoiluaktiviteettisivu/kaupunki.html">KAUPUNGISSA</a>
+                    <a class="nav-link" href="kaupunki.html">KAUPUNGISSA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Ulkoiluaktiviteettisivu/palaute.html">PALAUTE</a>
+                    <a class="nav-link" href="palaute.html">PALAUTE</a>
                 </li>
             </ul>
         </div>
     </nav>
+
 
     <script>
         var navbarToggler = document.querySelector(".navbar-toggler");
