--- a/etusivu.html
+++ b/etusivu.html
@@ -152,20 +152,18 @@
 
 
     <section class="yhteystiedot" id="contact">
-        <div class="row">
-            <div class="yrivi col-lg-6 ">
+        <div class="rivi">
+            <div class="col-lg-12">
                 <h2>Yhteystiedot</h2>
                 <ul>
                     <li style="list-style-image: url('puhelin.png')">+358 444 555 7854</li><br>
                     <li style="list-style-image: url('email.png')">kaupunki@info.com</li><br>
                     <li style="list-style-image: url('form.png')"><a
-                            href="file:///C:/temp/Ulkoiluaktiviteettisivu/palaute.html">Anna palautetta</a></li><br>
-
+                            href="palaute.html">Anna palautetta</a></li><br>
                 </ul>
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
