--- a/palaute.html
+++ b/palaute.html
@@ -135,8 +135,7 @@
                     <li style="list-style-image: url('puhelin.png')">+358 444 555 7854</li><br>
                     <li style="list-style-image: url('email.png')">kaupunki@info.com</li><br>
                     <li style="list-style-image: url('form.png')"><a
-                            href="file:///C:/temp/Ulkoiluaktiviteettisivu/palaute.html">Anna palautetta</a></li><br>
-
+                            href="palaute.html">Anna palautetta</a></li><br>
                 </ul>
             </div>
         </div>
