--- a/etusivu.html
+++ b/etusivu.html
@@ -107,7 +107,7 @@
                         Tutustu järviulkoiluaktivitteetteihin! Klikkaamalla kuvaa saat lisätietoja.
                     </p>
                     <span class="luistelukuva mx-auto mb-3">
-                        <a href="jarvi.html"><img src="luistelu.jfif"></a>
+                        <a href="jarvi.html"><img src="Luistelu.jfif"></a>
                     </span>
                 </div>
                 <div class="col-sm">
@@ -129,7 +129,7 @@
                         Tutustu kaupunkiulkoiluaktivitteetteihin! Klikkaamalla kuvaa saat lisätietoja.
                     </p>
                     <span class="luistelukuva mx-auto mb-3">
-                        <a href="kaupunki.html"><img src="ulkosali.jfif"></a>
+                        <a href="kaupunki.html"><img src="Ulkosali.jfif"></a>
                     </span>
                 </div>
             </div>
