--- a/palaute.html
+++ b/palaute.html
@@ -100,7 +100,7 @@
             </div>
             <div class="col-md-6">
                 <label for="numero" class="form-label">Puhelinnumero</label>
-                <input type="text" class="form-control" id="numero" placeholder="+358-000 0000 000">
+                <input type="text" class="form-control" id="numero" placeholder="+358-xxx-xxx-xxx">
             </div>
             <div class="col-md-12">
                 <label for="palaute" class="form-label">Viesti*</label>
