--- a/etusivu.html
+++ b/etusivu.html
@@ -49,7 +49,7 @@
     </script>
 
     <!-- Landing page -->
-    <div class="koti h-100 position-relative">
+    <div class="koti h-100">
         <div class="d-flex h-100 align-item-center">
             <div row>
                 <div class="text-black col-sm-6">
@@ -144,7 +144,7 @@
             </div>
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="100%" height="550" class="embed-responsive-item"
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d17422.017660141722!2d27.68572858715859!3d62.89115964656398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfi!2sfi!4v1677176478060!5m2!1sfi!2sfi"
+                    src="src=https://www.google.com/maps/d/embed?mid=1qdhTudh9qksgREJRwvC1d_ceM0zD8LY&ehbc=2E312F"
                     allowfullscreen></iframe>
             </div>
         </div>
