--- a/etusivu.html
+++ b/etusivu.html
@@ -144,8 +144,9 @@
             </div>
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="100%" height="550" class="embed-responsive-item"
-                    src="src=https://www.google.com/maps/d/embed?mid=1qdhTudh9qksgREJRwvC1d_ceM0zD8LY&ehbc=2E312F"
+                    src="https://www.google.com/maps/d/embed?mid=1qdhTudh9qksgREJRwvC1d_ceM0zD8LY&ehbc=2E312F"
                     allowfullscreen></iframe>
+
             </div>
         </div>
     </section>
