--- a/etusivu.html
+++ b/etusivu.html
@@ -141,7 +141,7 @@
     <section class="kartta-osa" id="kartta">
         <div class="container text-center">
             <div class="content-section-heading">
-                <h2 class="kategoriat-title">Etsi aktiviteettia sijainnin mukaan!</h2>
+                <h2 class="kategoriat-title">Katso aktiviteettien sijainnit!</h2>
             </div>
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="100%" height="550" class="embed-responsive-item"
